# OllamaFun

./: .env.example  .gitignore  README.md  pyproject.toml
config/: accounts.json  apex_plans.py
scripts/: run_optimization.py  seed_demo.py
src/: config.py  main.py
src/backtesting/: engine.py  optimizer.py  results.py  walk_forward.py
src/core/: account_manager.py  database.py  logging.py  models.py
src/dashboard/: app.py
src/execution/: base_executor.py  copy_trader.py  order_manager.py  paper_executor.py  tradovate_executor.py
src/indicators/: calculator.py  regime.py
src/journal/: analyzer.py  recorder.py
src/llm/: client.py
src/market_data/: aggregator.py  historical.py  ib_provider.py  tradovate_provider.py
src/monitoring/: health.py  reconnect.py
src/risk/: apex_drawdown.py  daily_limits.py  manager.py  position_sizer.py  stop_loss.py
src/scheduler/: scheduler.py
src/signals/: generator.py  news_calendar.py  scorer.py
src/strategies/: base.py  mean_reversion.py
src/tradovate/: auth.py  order_ws.py  rest_client.py
tests/: conftest.py
tests/test_backtesting/: test_engine.py  test_optimizer.py  test_results.py  test_walk_forward.py
tests/test_core/: test_account_manager.py
tests/test_execution/: test_copy_trader.py  test_order_manager.py  test_paper_executor.py
tests/test_indicators/: test_calculator.py  test_regime.py
tests/test_journal/: test_analyzer.py  test_recorder.py
tests/test_llm/: test_client.py
tests/test_risk/: test_apex_drawdown.py  test_daily_limits.py  test_manager.py  test_position_sizer.py  (+2 more)
(+8 files in other folders)
