[project]
name = "trading-assistant"
version = "0.1.0"
description = "AI-powered day trading assistant using local LLMs"
readme = "README.md"
requires-python = ">=3.12,<3.14"

dependencies = [
    # Broker
    "ib_async>=1.0.0",

    # Data & Analysis
    "pandas>=2.2",
    "numpy>=1.26",
    "pandas-ta>=0.3.14b",
    "duckdb>=1.0",

    # LLM
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.7",

    # Web & Dashboard
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "streamlit>=1.35",
    "plotly>=5.22",

    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",

    # Scheduling & Monitoring
    "apscheduler>=3.10",
    "structlog>=24.1",

    # Utils
    "python-dotenv>=1.0",
    "pytz>=2024.1",
    "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.4",
]

optimize = [
    "optuna>=3.6",
]

finetune = [
    "unsloth>=2024.6",
    "transformers>=4.41",
    "datasets>=2.19",
    "trl>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
